5-Multi-services/configs/frontend/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vsvc
spec:
  hosts:
  - "frontend-vsvc.default"
  gateways:
  - istio-gateway
  - mesh
  http:
  - match:
    - uri:
        exact: "/e2"
    route:
    - destination:
        host: frontend-svc.default.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: frontend-svc.default.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend-svc.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
